--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Income & Expense Tracker</title>
 </head>
 <body>
-    <div class="chewy">
-    <div class="overlay"></div>
     <h1 class="heading1">Income & Expense Tracker</h1>
+    <div class="container">
+    <div class="overlay"></div>
     <div class="displayContainer">
         <div class="incExpContainer">
             <h4 class="heading4">Expense Total: $<span class="expenseTotal"></span></h4>
@@ -19,35 +19,32 @@
         </div>
         <h2 class="heading2">Total Money: $<span class="totalMoney"></span></h2>
     </div>
-<div class="container">
     <div class="expenseContainer">
     <h3 class="heading3">Enter Your Expense</h3>
     <div class="error">Error: Please Enter Info</div>
-    <form>
+    <form id="form">
         <input type="text" class="expenseName" placeholder="Enter Your Expense" maxlength="20">
         <input type="number" class="expenseAmount" placeholder="Enter $ Amount" >
             <button class="btn1">Submit</button>
+            <button class="sortExpBtn">Sort by Price</button>
     </form>
-            <div class="break"></div>
-                <button class="sortExpBtn">Sort by Price</button>
-                <div class="expenseDisplayName"></div>
+    <div class="break"></div>
     </div>
+    <div class="expenseDisplayName"></div>
     <div class="break"></div>
     <div class="incomeContainer">
     <h3 class="heading3">Enter Your Income</h3>
     <div class="error2">Error: Please Enter Info</div>
-    <form>
+    <form id="form">
         <input type="text" class="incomeName" placeholder="Enter Your Income" maxlength="20">
         <input type="number" class="incomeAmount" placeholder="Enter $ Amount" >
             <button class="btn2">Submit</button>
+            <button class="sortIncBtn">Sort by Price</button>
     </form>
-            <div class="break"></div>
-                <button class="sortIncBtn">Sort by Price</button>
-                <div class="incomeDisplayName"></div>
+            <div class="break"></div> 
     </div>
-</div>    
+    <div class="incomeDisplayName"></div>
 </div>
-
     <script src="script.js"></script>
 </body>
 </html>
