--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <h1 class="heading1">Income & Expense Tracker</h1>
     <div class="container">
+        <h2 class="heading2">Your Balance: $<span class="totalMoney"></span></h2>
     <div class="overlay"></div>
     <div class="displayContainer">
         <div class="incExpContainer">
-            <h4 class="heading4">Expense Total: $<span class="expenseTotal"></span></h4>
-            <h4 class="heading4">Income Total: $<span class="incomeTotal"></span></h4>
+            <h4 class="heading4">Expenses: $<span class="expenseTotal"></span></h4>
+            <h4 class="heading4">Income: $<span class="incomeTotal"></span></h4>
         </div>
-        <h2 class="heading2">Total Money: $<span class="totalMoney"></span></h2>
+        <!-- <h2 class="heading2">Total Money: $<span class="totalMoney"></span></h2> -->
     </div>
     <div class="expenseContainer">
     <h3 class="heading3">Enter Your Expense</h3>
