--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h4 class="heading4">Income: $<span class="incomeTotal"></span></h4>
         </div>
     </div>
-    <div class="expenseContainer">
+    <div class="buttonContainer">
     <button class="launchExpenseBtn triggerExpenseModal">Add Expense</button>
     <button class="launchIncomeBtn triggerIncomeModal">Add Income</button>
     </div>
